Updated: userAuthority & submit list AI
- Updated Authority in the securityConfig
- Updated get all user
- Updated get all user paginate
- Updated get all submit
- Remove unused components & funcs.